[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/ArrowBack.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/SceneSwitcher.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Animations/UI_fade_in.tres" type="Animation" id=4]
[ext_resource path="res://Scenes/Animations/UI_fade_out.tres" type="Animation" id=5]

[node name="SceneSwitcher" type="Node"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/fade_in = ExtResource( 4 )
anims/fade_out = ExtResource( 5 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainPanel" type="Control" parent="Menu/Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Title" type="TextureRect" parent="Menu/Panel/MainPanel"]
margin_right = 481.0
margin_bottom = 107.0

[node name="ButtonsContainer" type="VBoxContainer" parent="Menu/Panel/MainPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 73.0
margin_top = 136.0
margin_right = 373.0
margin_bottom = 486.0
custom_constants/separation = 60

[node name="PlayButton" type="Button" parent="Menu/Panel/MainPanel/ButtonsContainer"]
margin_right = 300.0
margin_bottom = 76.0
size_flags_vertical = 7
text = "PLAY"

[node name="LevelsButton" type="Button" parent="Menu/Panel/MainPanel/ButtonsContainer"]
margin_top = 136.0
margin_right = 300.0
margin_bottom = 213.0
size_flags_vertical = 7
text = "LEVELs"

[node name="OptionsButton" type="Button" parent="Menu/Panel/MainPanel/ButtonsContainer"]
margin_top = 273.0
margin_right = 300.0
margin_bottom = 350.0
size_flags_vertical = 7
text = "OPTIONS"

[node name="LevelPanel" type="Control" parent="Menu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelHeader" type="HBoxContainer" parent="Menu/Panel/LevelPanel"]
anchor_right = 1.0
margin_bottom = 38.0
custom_constants/separation = 75

[node name="LevelButtonReturn" type="Button" parent="Menu/Panel/LevelPanel/LevelHeader"]
margin_right = 44.0
margin_bottom = 38.0
icon = ExtResource( 2 )

[node name="LevelTitle" type="TextureRect" parent="Menu/Panel/LevelPanel/LevelHeader"]
margin_left = 119.0
margin_right = 480.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="LevelContainer" type="GridContainer" parent="Menu/Panel/LevelPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -308.0
margin_right = 152.0
margin_bottom = 333.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Menu/Panel/MainPanel/ButtonsContainer/PlayButton" to="Menu" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/Panel/MainPanel/ButtonsContainer/LevelsButton" to="Menu" method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="Menu/Panel/MainPanel/ButtonsContainer/OptionsButton" to="Menu" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/Panel/LevelPanel/LevelHeader/LevelButtonReturn" to="Menu" method="_on_LevelButtonReturn_pressed"]
